2005-01-05  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	0.8.0pre3.
	
	* doc/en/MuinePluginLib/IPlayer.xml:

	Small clean up in the UIManager example.

2005-01-05  Jorn Baayen  <jbaayen@gnome.org>

	* data/Makefile.am:
	* doc/Makefile.am:

	Build cleanups.
	
	* DBusLib/Player.cs:
	* PluginLib/IPlayer.cs:
	* doc/en/MuineDBusLib/Player.xml:
	* doc/en/MuinePluginLib/IPlayer.xml:
	* plugins/DashboardPlugin.cs:
	* src/PlaylistWindow.cs:

	Remove IPlayer.WindowFocused, add IPlayer.Window, so that plugins
	can parent their dialogs properly, and one can still find out the focus
	state using IPlayer.Window.HasToplevelFocus.

2005-01-05  Peter Johanson  <latexer@gentoo.org>

	* doc/Makefile.am:

	Fix for fakeroot compiles.

2005-01-04  Jorn Baayen  <jbaayen@gnome.org>

	R ClientLib/.cvsignore:
	R ClientLib/AssemblyInfo.cs:
	R ClientLib/Makefile.am:
	R ClientLib/Player.cs:
	* DBusLib/.cvsignore:
	* DBusLib/AssemblyInfo.cs:
	* DBusLib/Makefile.am:
	* DBusLib/Player.cs:
	* Makefile.am:
	* configure.in:
	* doc/Makefile.am:
	* src/Makefile.am:

	Move muine-dbus from ClientLib to DBusLib.

2005-01-04  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:
	* src/PlaylistWindow.cs:

	Ditch "Command" suffix from action signal names.

2005-01-04  Jorn Baayen  <jbaayen@gnome.org>

	* ClientLib/AssemblyInfo.cs:
	* ClientLib/Player.cs:
	* PluginLib/AssemblyInfo.cs:
	* PluginLib/IPlayer.cs:
	* PluginLib/ISong.cs:
	* PluginLib/Plugin.cs:
	* TODO:
	* data/glade/AddWindow.glade:
	* data/glade/PlaylistWindow.glade:
	* data/glade/ProgressWindow.glade:
	* data/glade/SkipToWindow.glade:
	* plugins/DashboardPlugin.cs:
	* src/About.cs:
	* src/ActionThread.cs:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/Album.cs:
	* src/ColoredCellRendererPixbuf.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/EllipsizingLabel.cs:
	* src/ErrorDialog.cs:
	* src/FileSelector.cs:
	* src/FileUtils.cs:
	* src/GettextCatalog.cs: