@@ -1,3 +1,9 @@
+2005-01-06  Jorn Baayen  <jbaayen@gnome.org>
+
+	* libmuine/player-gst.c: (player_set_file), (player_stop):
+
+	Fix #162244.
+
 2005-01-05  Jorn Baayen  <jbaayen@gnome.org>
 
 	* configure.in:
